# Networm

./: Cargo.toml  TODO  clusterNotes  exampleGraph.dot  libspots.txt  readme.md  testGraph.dot  testprint.dot
src/: IPAddress.rs  agent.rs  connection.rs  dot_traits.rs  lib.rs  machine.rs  main.rs  net_graph.rs  scanners.rs  server.rs  ssh.rs  tracing.rs  writers.rs
src/agent/: input.rs
src/server/: commands.rs  input.rs
