[package]
name = "net_worm"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
futures = "0.3.31"
libp2p = { version = "0.54", features = ["noise", "ping", "tcp", "tokio", "yamux"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssh = "0.11.5"
petgraph = "0.6.5"
qscan = "0.6.0"
surge-ping = "0.8.1"
tracing = "0.1.41"

[[bin]]
name = "basic_graph"
path = "src/bin/basic_graph.rs"

[[bin]]
name = "ping_scan"
path = "src/bin/ping_scan.rs"
