[package]
name = "net_worm"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
libp2p = { version = "0.53", features = ["tcp", "tokio", "noise", "yamux", "ping"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

anyhow = "1"
openssh = "0.11.5"
petgraph = "0.6.5"
qscan = "0.6.0"
surge-ping = "0.8.1"
tracing = "0.1.41"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
clap = { version = "4.5.51", features = ["derive"] }
ssh2 = "0.9.5"

[[bin]]
name = "basic_graph"
path = "src/bin/basic_graph.rs"

[[bin]]
name = "ping_scan"
path = "src/bin/ping_scan.rs"
